[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Environmnent/Light03.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Part04/Part04_WarningLamp.gd" type="Script" id=2]
[ext_resource path="res://Objects/Static/Static_MineLamp.tscn" type="PackedScene" id=3]


[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="Part04_WarningLamp" type="Node2D"]
script = ExtResource( 2 )

[node name="TopLamp" parent="." instance=ExtResource( 3 )]
position = Vector2( 0.611633, -19.7506 )
scale = Vector2( 1, -1 )

[node name="FakeLight" type="Sprite" parent="TopLamp"]
visible = false
self_modulate = Color( 1, 1, 1, 0.117647 )
material = SubResource( 1 )
position = Vector2( -5.708, 379.161 )
scale = Vector2( 6, 6 )
texture = ExtResource( 1 )

[node name="DirectionalLight" type="Light2D" parent="TopLamp"]
position = Vector2( -5.70821, 262.65 )
scale = Vector2( 6, 4 )
z_index = 1
z_as_relative = false
texture = ExtResource( 1 )
energy = 0.8
range_z_min = -128
range_z_max = 128

[node name="BottomLamp" parent="." instance=ExtResource( 3 )]
position = Vector2( 0.611633, 0.565781 )

[node name="FakeLight" type="Sprite" parent="BottomLamp"]
visible = false
self_modulate = Color( 1, 1, 1, 0.117647 )
material = SubResource( 1 )
position = Vector2( -5.708, 376.891 )
scale = Vector2( 6, 6 )
texture = ExtResource( 1 )

[node name="DirectionalLight" type="Light2D" parent="BottomLamp"]
position = Vector2( -5.70821, 260.38 )
scale = Vector2( 6, 4 )
z_index = 1
z_as_relative = false
texture = ExtResource( 1 )
energy = 0.8
range_z_min = -128
range_z_max = 128
